--- a/ts-class-function/src/App.css
+++ b/ts-class-function/src/App.css
@@ -16,6 +16,7 @@
 .App-header {
   background-color: #282c34;
   height: 200px;
+  padding-bottom: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
